# wedding-manager

./: .clasp.json.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml
apps_script/: Budget.gs  Config.gs  Export.gs  ExportDialog.html  Guests.gs  ImportDialog.html  Menu.gs  Rsvp.gs  RsvpForm.html  Setup.gs
docs/: SENDING.md  SETUP.md  SHEET_SCHEMA.md  TEMPLATES.md
e2e/: render.mjs
e2e/mocks/: whatsapp-chat.html
e2e/scripts/: capture-media.mjs
e2e/shim/: google-script-shim.js
e2e/tests/: rsvp-form.spec.js
sender/: pyproject.toml
sender/wedding_sender/: __init__.py  cli.py  desktop.py  guests.py  phone.py  sentlog.py  templates.py
sender/wedding_sender/templates/: invite.txt  reminder.txt
src/: Config.gs  Invites.gs  Menu.gs  Reminders.gs  Rsvp.gs  RsvpForm.html  Setup.gs  WhatsApp.gs
tests/: conftest.py  test_cli.py  test_desktop.py  test_guests.py  test_phone.py  test_sentlog.py  test_templates.py
tests/fixtures/: export_sample.csv
tests/gas/: export.test.mjs  harness.mjs  rsvp.test.mjs
